--- a/src/main/resources/templates/books/book-edit.html
+++ b/src/main/resources/templates/books/book-edit.html
@@ -39,6 +39,9 @@
   <label style="font-weight: bold" class="font" for="year">Enter new year</label>
   <input class="font" type="text" th:field="*{year}" id="year"/>
   <br/>
+  <label style="font-weight: bold" class="font" for="rate">Rate this book</label>
+  <input class="font" type="text" th:field="*{rate}" id="rate"/>
+  <br/>
   <div th:if="${errors}">
     <ul>
       <li style="color: red" th:each="error : ${errors}" th:text="${error.getDefaultMessage()}"></li>
