--- a/src/main/resources/templates/books/book-main.html
+++ b/src/main/resources/templates/books/book-main.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 <div th:each="book :${books}">
-    <a class="font" th:href="@{/books/{id}(id=${book.getId()})}" th:text="${book.name+', '+book.author +', '+book.year}"></a>
+    <a class="font" th:href="@{/books/{id}(id=${book.getId()})}"
+       th:text="${book.name+', '+book.author +', '+book.year+' average rate: '+book.rate}"></a>
 </div>
 <hr/>
 <a class="font" th:href="@{books/new}">Add new book</a>
