--- a/src/main/resources/templates/people/person-main.html
+++ b/src/main/resources/templates/people/person-main.html
@@ -8,6 +8,21 @@
             font-size: 14px;
             font-family: "Trebuchet MS",sans-serif;
         }
+        .button {
+            border: none;
+            padding: 8px 12px;
+            background-color: #FFFFFF;
+            color: #000000;
+            border-radius: 8px;
+            font-size: 14px;
+            cursor: pointer;
+            margin-bottom: 4px;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+        .button:active {
+            box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+            transform: scale(0.98);
+        }
     </style>
 </head>
 <body>
@@ -17,5 +32,8 @@
 </div>
 <hr/>
 <a style="font-weight: bold" class="font" th:href="@{people/new}">Add new person</a>
+<form th:method="GET" th:action="@{/}">
+    <input class="font button" type="submit" value="Back">
+</form>
 </body>
 </html>
