--- a/src/main/resources/templates/people/person-main.html
+++ b/src/main/resources/templates/people/person-main.html
@@ -23,6 +23,9 @@
             box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
             transform: scale(0.98);
         }
+        .indent{
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -32,8 +35,14 @@
 </div>
 <hr/>
 <a style="font-weight: bold" class="font" th:href="@{people/new}">Add new person</a>
-<form th:method="GET" th:action="@{/}">
-    <input class="font button" type="submit" value="Back">
-</form>
+<div>
+    <form class="indent" th:method="GET" th:action="@{/}">
+        <input class="font button" type="submit" value="Back">
+    </form>
+    <form class="indent" th:method="GET" th:action="@{/books}">
+        <input class="font button" type="hidden" name="sort_by_year" value="true">
+        <input class="font button" type="submit" value="Sort">
+    </form>
+</div>
 </body>
 </html>
